--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,16 @@
 {
     "presets": [
-        "es2015",
-        "stage-0",
-        "react"
+        "@babel/preset-react"
     ],
     "ignore": [
         "node_modules"
+    ],
+    "plugins": [
+        [
+          "@babel/plugin-proposal-class-properties",
+          {
+              "loose": true
+          }
+        ]
     ]
 }
