--- a/package.json
+++ b/package.json
@@ -38,20 +38,19 @@
   "dependencies": {
     "autoprefixer": "^6.7.7",
     "babel": "^6.23.0",
-    "babel-core": "^6.24.0",
-    "babel-eslint": "^7.2.1",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.22.0",
+    "@babel/core": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.0.6",
+    "babel-preset-stage-0": "^6.24.1",
     "colors": "^1.2.1",
     "commander": "^2.15.1",
     "cross-os": "^1.3.0",
     "css-loader": "^0.28.0",
-    "eslint": "^3.19.0",
-    "eslint-plugin-react": "^6.10.3",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.18.3",
     "history": "^4.6.1",
-    "html-webpack-plugin": "^2.28.0",
+    "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.10.0",
     "if-env": "^1.0.0",
     "jquery": "^3.2.1",
@@ -60,22 +59,23 @@
     "less-loader": "^4.0.3",
     "mixin-deep": "^1.2.0",
     "moment": "^2.18.1",
-    "postcss-loader": "^1.3.3",
+    "postcss-loader": "^3.0.0",
     "prop-types": "^15.5.10",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.3",
-    "react-router": "^4.0.0",
-    "react-router-dom": "^4.0.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-with-addons": "0.0.1",
-    "redux": "^3.6.0",
-    "redux-actions": "^2.0.1",
-    "redux-thunk": "^2.2.0",
-    "redux-thunk-actions": "^1.1.6",
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
+    "redux-thunk": "^2.3.0",
+    "redux-thunk-actions": "^1.3.2",
     "request": "^2.85.0",
     "style-loader": "^0.16.1",
-    "webpack": "^2.3.3",
-    "webpack-bundle-analyzer": "^2.3.1"
+    "webpack": "^4.42.0",
+    "webpack-bundle-analyzer": "^2.3.1",
+    "fhirclient": "^2.0.7"
   },
   "browserslist": [
     "> 5%",
@@ -83,7 +83,9 @@
     "ie 10"
   ],
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "chai": "^3.5.0",
+    "html-webpack-plugin": "^3.2.0",
     "json5-loader": "^1.0.1",
     "karma": "^1.6.0",
     "karma-chai": "^0.1.0",
@@ -95,6 +97,9 @@
     "nightwatch": "^0.9.16",
     "react-hot-loader": "^1.3.1",
     "selenium-download": "^2.0.10",
-    "webpack-dev-server": "^2.4.2"
+    "terser-webpack-plugin": "^2.3.5",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
